Grid spacer items to make the flex layout wrap correctly

--- a/src/styles/components/charts/dialchart.less
+++ b/src/styles/components/charts/dialchart.less
@@ -27,7 +27,6 @@
   justify-content: space-around;
 
   .nodes-grid-item {
-    display: inline-block;
     margin: ceil(@base-spacing-unit * 0.3333);
     width: ceil(@base-spacing-unit * 3.33);
 
@@ -52,5 +51,12 @@
         margin-bottom: @base-spacing-unit * 0.5 !important;
       }
     }
+  }
+
+  .nodes-grid-spacer {
+    margin: ceil(@base-spacing-unit * 0.3333);
+    width: ceil(@base-spacing-unit * 3.33);
+    height: 0;
+    overflow: hidden;
   }
 }
